--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,32 @@
 
 </body>
 
+<style>
+    h2 {
+        margin: auto;
+        text-align: center;
+        font-family: "Consolas";
+        font-size: 5em;
+    }
+    table {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px; /* 5px rounded corners */
+        padding: 2px 16px;
+        margin: auto;
+        font-family: "Segoe UI",serif;
+    }
+    td {
+        font-size: 2em;
+    }
+
+    /* On mouse-over, add a deeper shadow */
+    table:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+
+</style>
+
 <script>
 
     function tableCreate(data) {
